# HoldingReport

./: .gitignore  README.md  pyproject.toml  run_archive_cleanup.py  run_scraper.py  run_webhook.py  test_archive.py
.github/workflows/: schedule.yml
config/: config.py
data/database/: processed_reports.json
src/: __init__.py
src/core/: __init__.py  hikariget.py  main.py  notifier.py  parser.py
src/utils/: __init__.py  archive_manager.py  db.py
src/webhook/: __init__.py  webhook_server.py
